Changelog
=========

0.4 (2009-11-07)
----------------

- Respect ``reload_templates`` option in BFG.

- Don't require ez_setup.py anymore.

- Nosetests no longer does coverage by default.

- This will be the last release will be the last release that will
  operate under BFG 1.0.  Future versions will operate only under BFG
  1.1.

0.3 (2009-05-03)
----------------

- Add a paster template for creating a Jinja2-based ``repoze.bfg``
  project.  (e.g. ``paster create -t bfg_jinja2_starter``).

0.2 (2009-05-02)
----------------

- Point setup.cfg index_url at http://dist.repoze.org/bfg/dev/simple

0.1 (unknown date)
------------------

- Initial release.

