@@ -1,3 +1,4 @@
+from repoze.bfg.jinja2.bindings import get_renderer
 from repoze.bfg.jinja2.bindings import get_template
 from repoze.bfg.jinja2.bindings import render_template
 from repoze.bfg.jinja2.bindings import render_template_to_response
