@@ -1,66 +1,71 @@
-from os.path import getmtime
-
+import os
 from webob import Response
 
+from zope.interface import implements
 from zope.component import queryUtility
 
-from repoze.bfg.interfaces import ISettings
-from repoze.bfg.path import caller_path
-
-from jinja2.loaders import FunctionLoader
+from jinja2.loaders import FileSystemLoader
 from jinja2 import Environment
 
-def _auto_reload():
-    settings = queryUtility(ISettings)
-    auto_reload = (settings and settings.reload_templates) or False
-    return auto_reload
-    
-def load_template(path):
-    path = caller_path(path)
-    try:
-        data = open(path, 'rb').read()
-        mtime = getmtime(path)
-    except (OSError, IOError):
-        return None
-    def uptodate():
-        try:
-            return getmtime(path) == mtime
-        except (OSError, IOError):
-            return False
-    return unicode(data, 'utf-8'), path, uptodate
+from repoze.bfg.interfaces import IResponseFactory
+from repoze.bfg.interfaces import ITemplateRenderer
 
-class BfgLoader(FunctionLoader):
-    """ 
-    Extends jinja2.loaders.FunctionLoader with configurable auto-reloading.    
-    """
-    auto_reload = None
-    def get_source(self, environment, template):
-        if self.auto_reload is None:
-            self.auto_reload = _auto_reload()
-        environment.auto_reload = self.auto_reload
-        return super(BfgLoader, self).get_source(environment, template)
-        
-env = Environment(loader=BfgLoader(load_template))
+from repoze.bfg.renderers import template_renderer_factory
+from repoze.bfg.settings import get_settings
+
+def renderer_factory(path, level=4):
+    return template_renderer_factory(path, Jinja2TemplateRenderer, level=level)
+
+class Jinja2TemplateRenderer(object):
+    implements(ITemplateRenderer)
+    def __init__(self, path):
+        settings = get_settings()
+        auto_reload = settings and settings['reload_templates']
+        directory, filename = os.path.split(path)
+        loader = FileSystemLoader(directory)
+        environment = Environment(loader=loader, auto_reload=auto_reload)
+        self.template = environment.get_template(filename)
+ 
+    def implementation(self):
+        return self.template
+   
+    def __call__(self, value, system):
+        try:
+            system.update(value)
+        except (TypeError, ValueError):
+            raise ValueError('renderer was passed non-dictionary as value')
+        result = self.template.render(system)
+        return result
+
+def get_renderer(path):
+    """ Return a callable ``ITemplateRenderer`` object representing a
+    ``jinja2`` template at the package-relative path (may also
+    be absolute). """
+    return renderer_factory(path)
+    
 
 def get_template(path):
-    """ Return a z3c.pt template object at the package-relative path
+    """ Return a ``jinja2`` template object at the package-relative path
     (may also be absolute) """
-    path = caller_path(path)
-    return env.get_template(path)
+    renderer = renderer_factory(path)
+    return renderer.implementation()
 
 def render_template(path, **kw):
-    """ Render a z3c.pt (ZPT) template at the package-relative path
+    """ Render a ``jinja2`` template at the package-relative path
     (may also be absolute) using the kwargs in ``*kw`` as top-level
     names and return a string. """
-    path = caller_path(path)
-    template = get_template(path)
-    return template.render(**kw)
+    renderer = renderer_factory(path)
+    return renderer(kw, {})
 
 def render_template_to_response(path, **kw):
     """ Render a z3c.pt (ZPT) template at the package-relative path
     (may also be absolute) using the kwargs in ``*kw`` as top-level
     names and return a Response object. """
-    path = caller_path(path)
-    result = render_template(path, **kw)
-    return Response(result)
-
+    """ Render a ``chameleon.zpt`` template at the package-relative
+    path (may also be absolute) using the kwargs in ``*kw`` as
+    top-level names and return a Response object with the body as the
+    template result. """
+    renderer = renderer_factory(path)
+    result = renderer(kw, {})
+    response_factory = queryUtility(IResponseFactory, default=Response)
+    return response_factory(result)
