@@ -1,0 +1,10 @@
+<configure xmlns="http://namespaces.repoze.org/bfg">
+
+  <include package="repoze.bfg.includes" file="meta.zcml" />
+
+  <renderer
+     factory="repoze.bfg.jinja2.bindings.renderer_factory"
+     name=".jinja2"
+     />
+
+</configure>
