@@ -1,9 +1,3 @@
-from repoze.bfg.jinja2 import render_template_to_response
-from repoze.bfg.view import static
-
-static_view = static('templates/static')
 
 def my_view(context, request):
-    return render_template_to_response('templates/mytemplate.jinja2',
-                                       request = request,
-                                       project = '{{project}}')
+    return {'project':'{{project}}'}
