@@ -1,146 +1,171 @@
-import os.path
 import unittest
 from repoze.bfg import testing
 
-class TestAutoReload(unittest.TestCase):
+class Base(object):
     def setUp(self):
-        testing.cleanUp()
+        testing.setUp()
 
     def tearDown(self):
-        testing.cleanUp()
+        testing.tearDown()
+
+    def _getTemplatePath(self, name):
+        import os
+        here = os.path.abspath(os.path.dirname(__file__))
+        return os.path.join(here, 'templates', name)
+
+    def _registerUtility(self, utility, iface, name=''):
+        from zope.component import getSiteManager
+        sm = getSiteManager()
+        sm.registerUtility(utility, iface, name=name)
+        return sm
         
-    def _callFUT(self):
-        from repoze.bfg.jinja2.bindings import _auto_reload
-        return _auto_reload()
-
-    def test_true(self):
-        from repoze.bfg.interfaces import ISettings
-        class Settings:
-            reload_templates = True
-        settings = Settings()
-        testing.registerUtility(settings, ISettings)
-        self.assertEqual(self._callFUT(), True)
-        
-    def test_false(self):
-        from repoze.bfg.interfaces import ISettings
-        class Settings:
-            reload_templates = True
-        settings = Settings()
-        testing.registerUtility(settings, ISettings)
-        self.assertEqual(self._callFUT(), True)
-
-    def test_unregistered(self):
-        self.assertEqual(self._callFUT(), False)
-
-class TestLoadTemplate(unittest.TestCase):
-    def _callFUT(self, path):
-        from repoze.bfg.jinja2.bindings import load_template
-        return load_template(path)
-        
-    def test_load_template(self):
-        template = self._callFUT('templates/helloworld.jinja2')
-        self.assertEqual(template[0], 
-            u"{% set a, b = 'foo', 'f\xf6\xf6' %}\nHello {{ b }}\n")
-        self.assert_(
-            template[1].endswith('tests/templates/helloworld.jinja2')
-            )
-        uptodate = template[2]
-        self.assertEqual(uptodate(), True)
-
-    def test_load_template_deleted_template_uptodate(self):
-        name = 'templates/to_delete.jinja2'
-        path = os.path.join(os.path.dirname(__file__), name)
-        f = open(path, 'w')
-        f.write('')
-        f.close()
-        template = self._callFUT(name)
-        uptodate = template[2]
-        self.assertEqual(uptodate(), True)
-        os.unlink(path)
-        self.assertEqual(uptodate(), False)
-        self.assertEqual(self._callFUT(name), None)
-
-    def test_load_template_nonexistent_template(self):
-        from repoze.bfg.jinja2.bindings import load_template
-        name = 'templates/nonexistent.jinja2'
-        path = os.path.join(os.path.dirname(__file__), name)
-        self.assertEqual(load_template(name), None)
-
-class TestBfgLoader(unittest.TestCase):
+class Jinja2TemplateRendererTests(Base, unittest.TestCase):
     def _getTargetClass(self):
-        from repoze.bfg.jinja2.bindings import BfgLoader
-        return BfgLoader
-    
-    def _makeOne(self, load_func):
-        return self._getTargetClass()(load_func)
+        from repoze.bfg.jinja2.bindings import Jinja2TemplateRenderer
+        return Jinja2TemplateRenderer
 
-    def test_get_source_autoreload_None_default(self):
-        def load_func(path):
-            return u'123'
-        loader = self._makeOne(load_func)
-        class Environment:
-            auto_reload = False
-        environ = Environment()
-        result = loader.get_source(environ, 'whatever')
-        self.assertEqual(loader.auto_reload, False)
-        self.assertEqual(result, (u'123', None, None))
-        self.assertEqual(environ.auto_reload, False)
+    def _makeOne(self, *arg, **kw):
+        klass = self._getTargetClass()
+        return klass(*arg, **kw)
 
-    def test_get_source_autoreload_None_withisettings(self):
-        def load_func(path):
-            return u'123'
-        loader = self._makeOne(load_func)
-        class Environment:
-            auto_reload = False
-        environ = Environment()
-        from repoze.bfg.interfaces import ISettings
-        class Settings:
-            reload_templates = True
-        settings = Settings()
-        testing.registerUtility(settings, ISettings)
-        result = loader.get_source(environ, 'whatever')
-        self.assertEqual(loader.auto_reload, True)
-        self.assertEqual(result, (u'123', None, None))
-        self.assertEqual(environ.auto_reload, True)
+    def test_instance_implements_ITemplate(self):
+        from zope.interface.verify import verifyObject
+        from repoze.bfg.interfaces import ITemplateRenderer
+        path = self._getTemplatePath('helloworld.jinja2')
+        verifyObject(ITemplateRenderer, self._makeOne(path))
 
-    def test_get_source_autoreload_true(self):
-        def load_func(path):
-            return u'123'
-        loader = self._makeOne(load_func)
-        loader.auto_reload = True
-        class Environment:
-            auto_reload = False
-        environ = Environment()
-        result = loader.get_source(environ, 'whatever')
-        self.assertEqual(result, (u'123', None, None))
-        self.assertEqual(environ.auto_reload, True)
+    def test_class_implements_ITemplate(self):
+        from zope.interface.verify import verifyClass
+        from repoze.bfg.interfaces import ITemplateRenderer
+        verifyClass(ITemplateRenderer, self._getTargetClass())
 
-class TestGetTemplate(unittest.TestCase):
-    def _callFUT(self, path):
-        from repoze.bfg.jinja2.bindings import get_template
-        return get_template(path)
+    def test_call(self):
+        minimal = self._getTemplatePath('helloworld.jinja2')
+        instance = self._makeOne(minimal)
+        result = instance({}, {'system':1})
+        self.failUnless(isinstance(result, unicode))
+        self.assertEqual(result, u'\nHello f\xf6\xf6')
+
+    def test_call_with_nondict_value(self):
+        minimal = self._getTemplatePath('helloworld.jinja2')
+        instance = self._makeOne(minimal)
+        self.assertRaises(ValueError, instance, None, {})
+
+    def test_implementation(self):
+        minimal = self._getTemplatePath('helloworld.jinja2')
+        instance = self._makeOne(minimal)
+        result = instance.implementation().render()
+        self.failUnless(isinstance(result, unicode))
+        self.assertEqual(result, u'\nHello f\xf6\xf6')
         
-    def test_it(self):
-        template = self._callFUT('templates/helloworld.jinja2')
-        self.assertEqual(template.module.a, 'foo')
-        self.assertEqual(template.module.b, u'f\xf6\xf6')
 
-class TestRenderTemplate(unittest.TestCase):
-    def _callFUT(self, path):
-        from repoze.bfg.jinja2.bindings import render_template
-        return render_template(path)
+class RenderTemplateTests(Base, unittest.TestCase):
+    def _callFUT(self, name, **kw):
+        from repoze.bfg.jinja2 import render_template
+        return render_template(name, **kw)
 
     def test_it(self):
-        rendering = self._callFUT('templates/helloworld.jinja2')
-        self.assertEqual(rendering, u'\nHello f\xf6\xf6')
+        minimal = self._getTemplatePath('helloworld.jinja2')
+        result = self._callFUT(minimal)
+        self.failUnless(isinstance(result, unicode))
+        self.assertEqual(result, u'\nHello f\xf6\xf6')
 
-class TestRenderTemplateToResponse(unittest.TestCase):
-    def _callFUT(self, path):
-        from repoze.bfg.jinja2.bindings import render_template_to_response
-        return render_template_to_response(path)
-        
+class RenderTemplateToResponseTests(Base, unittest.TestCase):
+    def _callFUT(self, name, **kw):
+        from repoze.bfg.jinja2 import render_template_to_response
+        return render_template_to_response(name, **kw)
+
     def test_it(self):
-        response = self._callFUT('templates/helloworld.jinja2')
-        self.assertEqual(response.app_iter[0],
-                         u'\nHello f\xf6\xf6'.encode('utf-8'))
+        minimal = self._getTemplatePath('helloworld.jinja2')
+        result = self._callFUT(minimal)
+        from webob import Response
+        self.failUnless(isinstance(result, Response))
+        self.assertEqual(result.app_iter, ['\nHello f\xc3\xb6\xc3\xb6'])
+        self.assertEqual(result.status, '200 OK')
+        self.assertEqual(len(result.headerlist), 2)
+
+    def test_iresponsefactory_override(self):
+        from webob import Response
+        class Response2(Response):
+            pass
+        from repoze.bfg.interfaces import IResponseFactory
+        self._registerUtility(Response2, IResponseFactory)
+        minimal = self._getTemplatePath('helloworld.jinja2')
+        result = self._callFUT(minimal)
+        self.failUnless(isinstance(result, Response2))
+
+class GetRendererTests(Base, unittest.TestCase):
+    def _callFUT(self, name):
+        from repoze.bfg.jinja2 import get_renderer
+        return get_renderer(name)
+
+    def test_nonabs_registered(self):
+        from zope.component import queryUtility
+        from repoze.bfg.chameleon_zpt import ZPTTemplateRenderer
+        from repoze.bfg.interfaces import ITemplateRenderer
+        minimal = self._getTemplatePath('helloworld.jinja2')
+        utility = ZPTTemplateRenderer(minimal)
+        self._registerUtility(utility, ITemplateRenderer, name=minimal)
+        result = self._callFUT(minimal)
+        self.assertEqual(result, utility)
+        self.assertEqual(queryUtility(ITemplateRenderer, minimal), utility)
         
+    def test_nonabs_unregistered(self):
+        from zope.component import queryUtility
+        from repoze.bfg.chameleon_zpt import ZPTTemplateRenderer
+        from repoze.bfg.interfaces import ITemplateRenderer
+        minimal = self._getTemplatePath('helloworld.jinja2')
+        self.assertEqual(queryUtility(ITemplateRenderer, minimal), None)
+        utility = ZPTTemplateRenderer(minimal)
+        self._registerUtility(utility, ITemplateRenderer, name=minimal)
+        result = self._callFUT(minimal)
+        self.assertEqual(result, utility)
+        self.assertEqual(queryUtility(ITemplateRenderer, minimal), utility)
+
+    def test_explicit_registration(self):
+        from repoze.bfg.interfaces import ITemplateRenderer
+        class Dummy:
+            template = object()
+        utility = Dummy()
+        self._registerUtility(utility, ITemplateRenderer, name='foo')
+        result = self._callFUT('foo')
+        self.failUnless(result is utility)
+
+class GetTemplateTests(Base, unittest.TestCase):
+    def _callFUT(self, name):
+        from repoze.bfg.jinja2 import get_template
+        return get_template(name)
+
+    def test_nonabs_registered(self):
+        from zope.component import queryUtility
+        from repoze.bfg.chameleon_zpt import ZPTTemplateRenderer
+        from repoze.bfg.interfaces import ITemplateRenderer
+        minimal = self._getTemplatePath('helloworld.jinja2')
+        utility = ZPTTemplateRenderer(minimal)
+        self._registerUtility(utility, ITemplateRenderer, name=minimal)
+        result = self._callFUT(minimal)
+        self.assertEqual(result.filename, minimal)
+        self.assertEqual(queryUtility(ITemplateRenderer, minimal), utility)
+        
+    def test_nonabs_unregistered(self):
+        from zope.component import queryUtility
+        from repoze.bfg.chameleon_zpt import ZPTTemplateRenderer
+        from repoze.bfg.interfaces import ITemplateRenderer
+        minimal = self._getTemplatePath('helloworld.jinja2')
+        self.assertEqual(queryUtility(ITemplateRenderer, minimal), None)
+        utility = ZPTTemplateRenderer(minimal)
+        self._registerUtility(utility, ITemplateRenderer, name=minimal)
+        result = self._callFUT(minimal)
+        self.assertEqual(result.filename, minimal)
+        self.assertEqual(queryUtility(ITemplateRenderer, minimal), utility)
+
+    def test_explicit_registration(self):
+        from repoze.bfg.interfaces import ITemplateRenderer
+        class Dummy:
+            template = object()
+            def implementation(self):
+                return self.template
+        utility = Dummy()
+        self._registerUtility(utility, ITemplateRenderer, name='foo')
+        result = self._callFUT('foo')
+        self.failUnless(result is utility.template)
