@@ -4,6 +4,7 @@ zip_ok = false
 
 [nosetests]
 match=^test
+where=repoze/bfg/jinja2
 nocapture=1
 cover-package=repoze.bfg.jinja2
 cover-erase=1
